# sauvc

./: README.md
sauvc2020_app/: CMakeLists.txt  package.xml
sauvc2020_app/launch/: control.launch
sauvc2020_control/: CMakeLists.txt  package.xml  setup.py
sauvc2020_control/scripts/: control_node.py  publisher.py  service_server.py  subscriber.py
sauvc2020_control/src/sauvc2020_control/: __init__.py  pid_controller.py
sauvc2020_control/tests/: test_pid_controller.py
sauvc2020_msgs/: CMakeLists.txt  package.xml
sauvc2020_msgs/msg/: MotionData.msg  MotorSpeed.msg
sauvc2020_msgs/srv/: RobotMotion.srv
sauvc_app/: CMakeLists.txt  package.xml
sauvc_app/launch/: control.launch
sauvc_control/: CMakeLists.txt  package.xml  setup.py
sauvc_control/scripts/: control_node.py
sauvc_control/src/sauvc_control/: pid_controller.py
sauvc_control/tests/: test_pid_controller.py
sauvc_msgs/: CMakeLists.txt  package.xml
sauvc_msgs/msg/: MotionData.msg  ThrustersSpeed.msg
