<?xml version="1.0"?>
<package format="2">
  <name>sauvc_app</name>
  <version>0.0.0</version>
  <description>The sauvc_app package</description>
  <maintainer email="leonardoedgar@todo.todo">leonardoedgar</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
